--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MCMCglmm
-Version: 2.36
+Version: 2.37
 Date: 2024-05-06
 Title: MCMC Generalised Linear Mixed Models
 Depends: Matrix, coda, ape
@@ -9,8 +9,8 @@ Author: Jarrod Hadfield
 Maintainer: Jarrod Hadfield <j.hadfield@ed.ac.uk>
 Description: Fits Multivariate Generalised Linear Mixed Models (and related models) using Markov chain Monte Carlo techniques (Hadfield 2010 J. Stat. Soft.). 
 License: GPL (>= 2)
-URL: https://github.com/jarrodhadfield/MCMCglmm
+URL: https://github.com/melizbishop/MCMCglmm
 NeedsCompilation: yes
-Packaged: 2024-05-06 11:43:13 UTC; jhadfiel
+Packaged: 2025-06-25 11:32:00 EST; melizbishop
 Repository: CRAN
-Date/Publication: 2024-05-06 12:50:02 UTC
+Date/Publication: 2025-06-25 11:42:00 EST
